[gd_scene load_steps=8 format=3 uid="uid://bf7ac1gwb6is6"]

[ext_resource type="Script" path="res://scenes/levels/level_1.gd" id="1_sa31g"]
[ext_resource type="PackedScene" uid="uid://ctuvqp0y4aqpt" path="res://scenes/levels/meta_map.tscn" id="2_bgxxf"]
[ext_resource type="Script" path="res://scenes/levels/Towers.gd" id="3_7aykm"]
[ext_resource type="Script" path="res://scenes/levels/Enemies.gd" id="4_h2dur"]
[ext_resource type="PackedScene" uid="uid://kges880beft0" path="res://scenes/actorsss/tower_1.tscn" id="4_jw08p"]
[ext_resource type="Script" path="res://scenes/levels/CamTarget.gd" id="6_dvfpp"]
[ext_resource type="PackedScene" uid="uid://2kwathuknwi" path="res://scenes/actorsss/effects/selector.tscn" id="7_kfx3y"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_sa31g")

[node name="MetaMap" parent="." instance=ExtResource("2_bgxxf")]

[node name="Actors" type="Node2D" parent="."]

[node name="Towers" type="Node2D" parent="Actors"]
script = ExtResource("3_7aykm")

[node name="tower1" parent="Actors/Towers" instance=ExtResource("4_jw08p")]
position = Vector2(447, 194)

[node name="Enemies" type="Node2D" parent="Actors"]
position = Vector2(-88, 61)
script = ExtResource("4_h2dur")

[node name="Projectiles" type="Node" parent="Actors"]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerSpawb" type="Timer" parent="."]
wait_time = 0.9
one_shot = true
autostart = true

[node name="Target" type="Node2D" parent="."]
position = Vector2(834, 509)

[node name="CamTarget" type="Node2D" parent="."]
script = ExtResource("6_dvfpp")

[node name="MovingCam" type="Camera2D" parent="CamTarget"]
anchor_mode = 0
position_smoothing_enabled = true

[node name="Panel" type="Panel" parent="CamTarget/MovingCam"]
visible = false
offset_left = 951.0
offset_top = 446.0
offset_right = 1151.0
offset_bottom = 646.0

[node name="HPFire" type="Label" parent="CamTarget/MovingCam/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 10

[node name="Speed" type="Label" parent="CamTarget/MovingCam/Panel"]
layout_mode = 0
offset_top = 97.0
offset_right = 40.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 10

[node name="HP" type="Label" parent="CamTarget/MovingCam"]
offset_right = 40.0
offset_bottom = 23.0
text = "HP: 100"

[node name="Selector" parent="." instance=ExtResource("7_kfx3y")]

[connection signal="attackerized" from="Actors/Towers" to="." method="_on_towers_attackerized"]
[connection signal="damagerizer" from="Actors/Enemies" to="." method="_on_enemies_damagerizer"]
[connection signal="moneyizer" from="Actors/Enemies" to="." method="_on_enemies_moneyizer"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerSpawb" to="." method="_on_timer_spawb_timeout"]
